@@ -2,13 +2,13 @@
     DirB:        1*L->H,        0*H->L
  EnableA:        1*L->H,        1*H->L
  EnableB:        1*L->H,        0*H->L
-   StepA:    14272*L->H,    14272*H->L, Max High=12us Total High=66639us
+   StepA:    14266*L->H,    14266*H->L, Max High=12us Total High=66681us
    StepB:        0*L->H,        0*H->L, Max High=0us Total High=0us
 Position[A]=0
 
-Time in DirA  max=1170487 us, total=1170487 us
+Time in DirA  max=1170335 us, total=1170335 us
 
-Time in EnableA  max=335944 us, total=335944 us
+Time in EnableA  max=335945 us, total=335945 us
 
-Time in StepA  max=12 us, total=66639 us
+Time in StepA  max=12 us, total=66681 us
 
